@@ -1,6 +1,7 @@
 MCDawn 1.0.2.1
 -Fixed startup update check for GUI users.
 -Reduced startup lag for GUI users.
+-Fixed /viewlikes timer on non-MySQL servers.
 
 MCDawn 1.0.2.0
 -New Commands
